[package]
name = "beacon-verifier"
version = "0.2.2"
authors = ["Mr.Robb <roberto.ariosa@crg.eu>"]
edition = "2018"
license = "Apache-2.0"
description = "Compliance tool to verify beacon implementations."
repository = "https://github.com/ga4gh-beacon/beacon-verifier"
keywords = ["genetics", "http", "api", "jsonschema", "validation"]
categories = ["development-tools::testing"]
readme = "README.md"

[dependencies]

# Config
clap = { version = "3.0.0-beta.4", features = ["yaml"] }

# Filesystem
walkdir = "2.3.2"
tempfile = "3.2.0"
git2 = "0.13"

# Validation
jsonschema = { version = "0.12.1", features = ["reqwest"] }
url = { version = "2.2.2", features = ["serde"] }
regex = "1.5.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Log
log = "0.4.0"
pretty_env_logger = "0.4.0"
thiserror = "1.0"