[package]
name = "beacon-verifier"
version = "0.2.7"
authors = ["Mr.Robb <roberto.ariosa@crg.eu>"]
edition = "2021"
license = "Apache-2.0"
description = "Compliance tool to verify beacon implementations."
repository = "https://github.com/ga4gh-beacon/beacon-verifier"
keywords = ["genetics", "http", "api", "jsonschema", "validation"]
categories = ["development-tools::testing"]
readme = "README.md"
rust-version = "1.56"

[dependencies]

# Config
clap = { version = "2.33", features = ["yaml"] }

# Filesystem
walkdir = "2.3.2"
tempfile = "3.2.0"
git2 = "0.13"

# Validation
jsonschema = { version = "0.13.1", features = ["reqwest"] }
url = { version = "2.2.2", features = ["serde"] }
regex = "1.5.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Log
log = "0.4.0"
pretty_env_logger = "0.4.0"
thiserror = "1.0"